--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,9 @@ body {
 .card.flipped {
     background-color: #fff;
 }
+
+#restart-btn {
+    padding: 10px 20 px;
+    margin-bottom: 20 px;
+    cursor: pointer;
+}
