--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,23 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 100vh;
     margin: 0;
 }
 
 #game-board {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
+    grid-template-columns: repeat(4, minmax(70px, 1fr));
     grid-gap: 10px;
+    width: 90%;
+    max-width: 500px;
 }
 
 .card {
-    width: 100px;
-    height: 100px;
+    aspect-ratio: 1 / 1;
+    width: 100%;
+    height: 100%;
     background-color: #ccc;
     display: flex;
     align-items: center;
