--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 100vh;
     margin: 0;
+    padding-bottom: 20px;
 }
 
 #game-board {
