--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,9 @@ body {
     margin-bottom: 20px;
     cursor: pointer;
 }
+
+#card-select{
+    margin: 10px;
+    padding: 8px, 12px;
+    cursor: pointer;
+}
