--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,29 @@ body {
     padding: 8px, 12px;
     cursor: pointer;
 }
+
+#win-modal.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+#win-modal .modal-content {
+    background: white;
+    padding: 25px 35px;
+    text-align: center;
+    border-radius: 10px;
+    animation: pop-in 0.5s ease-out;
+}
+
+@keyframes pop-in {
+    from { transform: scale(0); opacity: 0; }
+    to { transform: scale(1); opacity: 1; }
+}
