--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,12 @@ body {
     background-color: #fff;
 }
 
+.card img.card-image {
+    width: 80%;
+    height: 80%;
+    object-fit: contain;
+}
+
 #restart-btn {
     padding: 10px 20px;
     margin-bottom: 20px;
