--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ label {
     grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
     grid-gap: 8px;
     justify-content: center;
+    justify-items: center;
     width: 95%;
     max-width: 550px;
     margin: 0 auto;
